--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
     <table>
         
         <tr>
-            <th>Task</th>
+            <th>Schedule Title</th>
             <th>Added</th>
             <th>Actions</th>
         </tr>
