init app with procfile

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html'%}
 
 {% block head %}
-<title>EZ Schedule</title>
+<title>Create Poll</title>
 {% endblock %}
 
 {% block body %}
@@ -14,7 +14,7 @@
     <table>
         
         <tr>
-            <th>Schedule Title</th>
+            <th>Poll Title</th>
             <th>Added</th>
             <th>Actions</th>
         </tr>
@@ -35,7 +35,7 @@
     <div class="form">
         <form action="/" method="POST">
             <input type="text" name="content" id="content">
-            <input type="submit" value="Build Schedule">
+            <input type="submit" value="Create Poll">
         </form>
     </div>
 </div>
