init app with procfile

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,9 +6,9 @@
 
 {% block body %}
 <div class="content">
-    <h1 style="text-align: center">Make a Schedule</h1>
+    <h1 style="text-align: center">Create a Poll</h1>
     {% if tasks|length < 1 %}
-    <h4 style="text-align: center">No schedules made. Create one below!</h4>
+    <h4 style="text-align: center">No Polls made. Create one below!</h4>
     {% else %}
 
     <table>
