--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,9 @@
     <h1 style="text-align: center">Create a Poll</h1>
     {% if tasks|length < 1 %}
     <h4 style="text-align: center">No Polls made. Create one below!</h4>
+        {% if task.content|length < 1 %}
+        <h4 style="text-align: center">Invalid Poll Title. Please enter a Poll Title name</h4>
+        {% endif %}
     {% else %}
 
     <table>
