--- a/templates/update.html
+++ b/templates/update.html
@@ -12,7 +12,7 @@
 
     <div class="form">
         <form action="/update/{{task.id}}" method="POST">
-            <input type="text" name="content" id="content" valuue = "{{task.content}}">
+            <input type="text" name="content" id="content" value = "{{task.content}}">
             <input type="submit" value="Update schedule">
         </form>
     </div>
