--- a/static/css/main.css
+++ b/static/css/main.css
@@ -52,3 +52,12 @@ a.button1 {
     text-decoration: none;
     color: rgb(255, 0, 0);
 }
+
+a.button2 {
+    -webkit-appearance: button;
+    -moz-appearance: button;
+    appearance: button;
+
+    text-decoration: none;
+    color: rgb(204, 92, 189);
+}
