--- a/templates/index.html
+++ b/templates/index.html
@@ -25,6 +25,7 @@
             <tr>
                 <td>{{ task.content }}</td>
                 <td>{{ task.date_created.date() }}</td>
+                <td>{{ task.timezone }}</td>
                 <td>
                     <a href="/delete/{{task.id}}">Delete</a>
                     <br>
