able to now get data from db and print it to the voter page. like poll title, etc. need to figure out how to do per admin only

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -67,8 +67,9 @@ a.button2 {
   }
 
 .tab { 
-      margin-left: 50px;
-      margin-bottom: 50px ; 
+    margin-top: 5px;
+    margin-left: 50px;
+    margin-bottom: 5px ; 
 }
 
 .voterTextboxName{
